--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Export1.loader.js";
+      var loaderUrl = buildUrl + "/export2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Export1.data",
-        frameworkUrl: buildUrl + "/Export1.framework.js",
-        codeUrl: buildUrl + "/Export1.wasm",
+        dataUrl: buildUrl + "/export2.data",
+        frameworkUrl: buildUrl + "/export2.framework.js",
+        codeUrl: buildUrl + "/export2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BIY09SML01",
