--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/export3.loader.js";
+      var loaderUrl = buildUrl + "/Yeni klasör.loader.js";
       var config = {
-        dataUrl: buildUrl + "/export3.data",
-        frameworkUrl: buildUrl + "/export3.framework.js",
-        codeUrl: buildUrl + "/export3.wasm",
+        dataUrl: buildUrl + "/Yeni klasör.data",
+        frameworkUrl: buildUrl + "/Yeni klasör.framework.js",
+        codeUrl: buildUrl + "/Yeni klasör.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BIY09SML01",
